@@ -16,7 +16,6 @@ except ImportError:
 
 from fs.base import FS
 from fs.wrapfs import WrapFS
-from fs.path import *
 
 
 class LazyFS(WrapFS):
